--- a/src/components/nav/style2.css
+++ b/src/components/nav/style2.css
@@ -52,16 +52,15 @@
   }
 
   .dsa-NavContainer nav {
-    display: block; /* Hide the navigation on smaller screens */
+    display: block;
+    /* Hide the navigation on smaller screens */
   }
-  .dsa-NavContainer
-    .dsa-nav-responsive
-    .dsa-responsive-menu
-    .dsa-tags
-    .link-no-underline {
+
+  .dsa-NavContainer .dsa-nav-responsive .dsa-responsive-menu .dsa-tags .link-no-underline {
     text-decoration: none;
     color: #090909;
   }
+
   .dsa-NavContainer .dsa-nav-responsive .dsa-responsive-menu {
     display: flex;
     flex-direction: column;
@@ -77,7 +76,8 @@
     height: 100%;
     z-index: 2;
     transition: right 1.5s;
-    right: 0px; /* Hidden state */
+    right: 0px;
+    /* Hidden state */
     margin-top: 0;
     transition: right 0.5s ease-in-out;
   }
@@ -85,6 +85,7 @@
   .dsa-NavContainer .profile img {
     width: 5vw;
   }
+
   .nav-responsive-closing-button {
     position: absolute;
     top: 5%;
@@ -100,16 +101,19 @@
     transition: all 0.2s linear;
     font-size: 1.25em;
   }
+
   .nav-responsive-tags {
     font-size: 2rem;
     padding: 2% 0;
   }
+
   .dsa-tags.show {
     /* margin-top: 20%; */
     position: absolute;
     top: 13%;
     text-align: center;
   }
+
   .logout-button-res {
     color: #090909;
     padding: 0.7em 1.7em;
@@ -131,6 +135,7 @@
   .logout-button-res:active {
     box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
   }
+
   .nav-responsive-tags {
     --color: #00a97f;
     padding: 0.8em 1.7em;
@@ -186,11 +191,14 @@
   .nav-responsive-tags:active {
     filter: brightness(0.8);
   }
+
   .nav-responsive-tags {
     margin-top: 10%;
   }
+
   .dsa-responsive-menu.open {
-    right: 0; /* When menu is open */
+    right: 0;
+    /* When menu is open */
     transition: 0.5s ease-in;
     margin-top: 0;
   }
